--- a/doc/dev.LaTeX/dev.tex
+++ b/doc/dev.LaTeX/dev.tex
@@ -94,9 +94,11 @@
 	\begin{tabularx}{\textwidth}{lX}
 		\green{\texttt{-{}-install <name1>, \dots}} & Install or upgrade the specified packages \\
 		
+		\green{\texttt{-{}-reinstall <name1>, \dots}} & Like install but reinstalls the specified packages even if the same version is already installed \\
+		
 		\green{\texttt{-{}-policy <name>}} & Show the installed and available versions of <name> \\
 		
-		\texttt{-{}-show-version <name>} & Print a package's version number or `\texttt{-{}-{}-}' if it is not installed; This operation is intended to automatically query for installed packages. \\
+		\green{\texttt{-{}-show-version <name>}} & Print a package's version number or `\texttt{-{}-{}-}' if it is not installed; This operation is intended to automatically query for installed packages. \\
 		
 		\green{\texttt{-{}-mark-auto <name1>, \dots}} & Mark the specified packages as automatically installed \\
 		
