tpmdb: search only in latest version of a package

--- a/doc/dev.LaTeX/dev.tex
+++ b/doc/dev.LaTeX/dev.tex
@@ -233,6 +233,8 @@
 		
 		\texttt{-{}-arch <arch>} & Filter the results by architecture \\
 		
+		\texttt{-{}-only-in-latest-version} & Do only search in the latest version of a package \\
+		
 		\texttt{-{}-print-only-names} & Do only print the package's names and no version or architecture \\
 	\end{tabularx}
 	\egroup
